# MicroServicio

./: .dockerignore  README.md  docker-compose.yml  init_extra_dbs.sql  push_to_dockerhub.ps1
CRM_GestionAlumnos/: .dockerignore  .gitignore  docker-compose.yml
CRM_GestionAlumnos/backend/: Dockerfile  asdsd.txt  check_errors.py  pyproject.toml
CRM_GestionAlumnos/backend/app/: config.py  database.py  init_db.py  main.py  models.py  schemas.py
CRM_GestionAlumnos/backend/app/clients/: __init__.py  ticket_client.py
CRM_GestionAlumnos/backend/app/core/: security.py
CRM_GestionAlumnos/backend/app/routers/: auth.py  estudiante.py  profesor.py  roles.py  ticket.py  usuario.py
CRM_GestionAlumnos/frontend/: Dockerfile  package-lock.json  package.json  rsbuild.config.cjs  rsbuild.config.ts
Notification-service/: Dockerfile
courses_db/: Dockerfile  README.md  courses_db.sql  package-lock.json  package.json
courses_db/src/: app.controller.ts  app.module.ts  main.ts
enrollments_db/: -- enrollments_db.sql  Dockerfile  enrollments_db_v2.sql  package-lock.json  package.json
enrollments_db/src/: app.module.ts  main.ts
grade-service/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
grade-service/context/: grades_db.sql
grade-service/src/: app.module.ts
microservice-gateway/: pom.xml
report-service/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
report-service/context/: report_db.sql
report-service/src/: app.module.ts  main.ts
report-service/test/: report.e2e-spec.ts
ticket-service/: Dockerfile  pom.xml
(+64 files in other folders)
